20120103
	avoid re-defining isnan; use isNaN instead
20111231
	Linux/*/include/emu.h adjustments for USE_PTHREADS for non-x86 processors
20111221
	add `...` uninterpreted string literals to limbo/lex.c, appl/cmd/limbo/lex.b
20111215
	liblogfs,libnandfs: use logfsos.h (added to include) to make library source independent of os
	add fonts/vera
	add fonts/courier
20111214
	change Linux port to use pthreads instead of clone directly
	emu/Linux: rename os.c to os-clone.c; rename osp.c to os.c
	emu/Linux/mkfile: remove -lrt, add kproc-pthreads.$O
	Linux/*/include: define USE_PTHREADS
	Linux/386/include/emu.h: increase KSTACK to 32k for Linux gethost* functions
20111003
	libinterp/heap.c:/^dtype discount size of map [issue 258]
20110820
	emu/*/devfs.c, emu/port/devfs-posix.c - stubs for osdisksize, Linux implementation of osdisksize
	emu/port/devfs-posix.c - also try SOCK_DGRAM for AF_UNIX [issue 269]
20110819
	appl/cmd/mk/mk.b - use raise "fail:..." for exit status [issue 268]
20110629
	change x86 getcallerpc to avoid use of %ebp [issue 266]
	change type of getcallerpc to uintptr from ulong
20110619
	emu/port/devfs-posix.c: put major/minor st_dev into path without mapping (with luck)
	emu/port/kproc-pthreads.c: ensure pthread stack is at least PTHREAD_STACK_MIN (plus slop)
20110526
	change osyield in Windows to use SwitchToThread instead of sleep(0) [e-mail list]
20110525
	utils/[5678kqv]c/mkfile - include -I. before $CFLAGS to ensure right gc.h [issue 264]
20110516
	merge changes from vac branch of mechiel-inferno-os (googlecode)
20110426
	emu/Linux/asm-arm.S linux system call interface changed [issue 215, mechiel]
20110419
	libinterp/tk.c:/^Tk_rect shouldn't return non-canonical rectangles
	/appl/wm/mand.b handle reshape to empty rectangles
20110408
	appl/lib/json.b - have writeval produce same (correct) form as .text for Real [issue 230]
20110407
	fix embarrassingly broken Lists->delete; add Lists->find [issue 257]