@@ -36,6 +36,15 @@ typedef unsigned short u16int;
 typedef unsigned char u8int;
 typedef unsigned long uintptr;
 
+typedef signed char	int8;
+typedef unsigned char	uint8;
+typedef short	int16;
+typedef unsigned short	uint16;
+typedef int	int32;
+typedef unsigned int	uint32;
+typedef long long	int64;
+typedef unsigned long long	uint64;
+
 #define	USED(x)		if(x){}else{}
 #define	SET(x)
 
@@ -252,6 +261,8 @@ extern	double	ipow10(int);
 #define	pow10	infpow10
 extern	double	pow10(int);
 extern	vlong	strtoll(const char*, char**, int);
+#define	qsort	infqsort
+extern	void	qsort(void*, long, long, int (*)(void*, void*));
 extern	uvlong	strtoull(const char*, char**, int);
 extern	void	sysfatal(char*, ...);
 extern	int	dec64(uchar*, int, char*, int);
